--- a/aplication/css/palette.css
+++ b/aplication/css/palette.css
@@ -184,23 +184,22 @@
 
   /*General*/
   --background: #130c27;
-  --text-color: #F5F0FE;/*Falta aplicar en algunas paginas*/
-  --text-color-label_name:#f5f0fe62;
+  --text-color: #F5F0FE;
+  /*Falta aplicar en algunas paginas*/
+  --text-color-label_name: #f5f0fe62;
   --text-color-dark: #130c27;
   --special-text-color: #7230f7;
 
   /*Lateral Menu*/
-  --lateralMenu-background: #170F2F; /*#11003F*/
+  --lateralMenu-background: #170F2F;
   --lateralMenuIcon-background: #641ee3;
-  --lateralMenuItem-locate-background: #290099;
   --lateralMenuItem-hover-background: #1b0066;
   --lateralMenuItem-active-background: #0e0033;
   --lateralMenuOptionGroup-background: #0e0033;
   --lateralMenuSeparator: #5e3dc2;
-  --logoutBtn-Fillcolor: #F73051;
 
   /*Nav*/
-  --nav-background:#170F2F;
+  --nav-background: #170F2F;
 
 
   /*Buttons*/
@@ -209,7 +208,8 @@
   --button-primary-disabled: #9f85ff;
 
 
-  /*Forms*/ /*DEPRECAR: MIGRAR A CARD*/
+  /*Forms*/
+  /*DEPRECAR: MIGRAR A CARD*/
   --form-background: #170F2F;
   --border-content-color: #26184e;
 
@@ -217,17 +217,17 @@
   --card-bg: #170F2F;
   --card-shadow: #110B22;
 
-  
+
   /*Graps*/
-  --LatencyGraphDot-color:#B5F730;
-  --LatencyGraphLine-color:#b5f730a1;
-  --LatencyGraphArea-color:#5e3dc22a;
+  --LatencyGraphDot-color: #B5F730;
+  --LatencyGraphLine-color: #b5f730a1;
+  --LatencyGraphArea-color: #5e3dc22a;
   --LatencyGraphGrid-color: #f5f0fe13;
 
   --LatencyGraphTooltip-border-color: #26184e;
   --LatencyGraphTooltip-text-color: var(--text-color);
   --LatencyGraphTooltipBg-color: #26184e;
-  
+
 
   /*Inputs*/
   --input-background: #17102c;
@@ -240,6 +240,8 @@
 
   /*Courtin loader*/
   --spinner-color: #F5F0FE;
+  --spinner-default-color: #f5f0fe88;
+  
   /*Checkbox*/
   --checkbox-active: #b499ff;
   --checkbox-active-inner: #07001a;
@@ -250,45 +252,45 @@
   --checkbox-disabled-inner: #130c27;
 
   /*row*/
-  --row-hover:#26184e;
+  --row-hover: #26184e;
   --row-background-down: #f7305127;
   --row-background-down-hover: #f7305156;
   --row-background-warning: #ffd00027;
   --row-background-warning-hover: #ffd00056;
   /*Alert*/
-  --alert-background:#170F2F;
-  --alert-success:#B5F730;
-  --alert-warning:#ffd000;
-  --alert-error:#F73051;
+  --alert-background: #170F2F;
+  --alert-success: #B5F730;
+  --alert-warning: #ffd000;
+  --alert-error: #F73051;
 
   /*Scroll bar*/
-  --scrolBar-background:#170F2F;
-  --scrolBar-bar:#392574;
-  --scrolBar-hover:#392574;
+  --scrolBar-background: #170F2F;
+  --scrolBar-bar: #392574;
+  --scrolBar-hover: #392574;
 
   /*tooltip*/
-  --tooltip-background:#26184e;
+  --tooltip-background: #26184e;
 
   /*Loaders*/
-  --spinner-loader:#f5f0fe88;
-  
+
+
   /*dropdown menu*/
-  --dropdownMenu-background:#26184e;
-  --dropdownMenuItem-hover:#392574;
-  --dropdownMenuItem-option-divider:#1e133d;
+  --dropdownMenu-background: #26184e;
+  --dropdownMenuItem-hover: #392574;
+  --dropdownMenuItem-option-divider: #1e133d;
 
   /*Dialog*/
   --dialog-background: #1e133b;
-  --dialog-header-background:#170F2F;
+  --dialog-header-background: #170F2F;
 
   /*Special colors*/
   --accent-green: #B5F730;
   --soft-green: #8bc81a;
   --accent-red: #F73051;
-  --accent-red-hover:#D12945;
+  --accent-red-hover: #D12945;
   --soft-red: #ff6a6a;
   --accent-yellow: #ffef41;
-  --soft-violete:#5853ff;
+  --soft-violete: #5853ff;
   --accent-blue: #0600EF;
   --accent-blue-hover: #1300D0;
 
@@ -299,6 +301,6 @@
 
   /*Lines*/
   --line-soft-background: #150E2B;
-  
+
 
 }
