--- a/aplication/css/style.css
+++ b/aplication/css/style.css
@@ -7,114 +7,8 @@
     margin: 0;
     text-decoration: none;
     color: inherit;
-
     -webkit-tap-highlight-color: transparent;
 }
-
-
-/* Pasar a componentes*/
-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    color: var(--text-color);
-    cursor: pointer;
-    transition: transform 0.3s cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-button:active {
-    transform: scale(.95);
-}
-
-button:disabled {
-    cursor: not-allowed;
-    /* Cambia el cursor para indicar que está deshabilitado */
-    background-color: var(--button-primary-disabled);
-    transform: none;
-}
-
-
-/*
-button.small {
-    gap: 3px;
-    border-radius: 5px;
-    padding: 8px;
-    height: 30px;
-    width: fit-content;
-    font-size: 14px;
-}
-
-button.small svg {
-    width: 13px;
-}
-
-button.medium {
-    gap: 3px;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 8px;
-    height: 38px;
-    min-height: 38px;
-    min-width: 38px;
-    width: fit-content;
-    font-size: 14px;
-}
-
-button.medium svg {
-    width: 20px;
-}
-
-button.green {
-    background-color: var(--green-500);
-    color: var(--text-50);
-}
-
-button.green:active {
-    background-color: var(--green-600);
-    box-shadow: 0px 0px 7px 0px var(--green-800) inset;
-}
-
-button.green svg {
-    fill: var(--text-50);
-}
-
-button.blue {
-    background-color: var(--blue-500);
-}
-
-button.blue:hover {
-    background-color: var(--blue-400);
-}
-
-button.blue:active {
-    background-color: var(--blue-600);
-    box-shadow: 0px 0px 7px 0px var(--blue-800) inset;
-}
-
-button.blue svg {
-    fill: var(--text-50);
-}
-
-button.red {
-    background-color: var(--red-500);
-}
-
-button.red:hover {
-    background-color: var(--red-400);
-}
-
-button.red:active {
-    background-color: var(--red-600);
-    box-shadow: 0px 0px 7px 0px var(--red-800) inset;
-}
-
-button.red svg {
-    fill: var(--text-50);
-}
-    */
 
 body {
     width: 100%;
@@ -133,7 +27,6 @@ body {
     /*Must match transition duration in JS*/
 
 }
-
 
 nav {
     display: flex;
@@ -177,7 +70,6 @@ nav button:active {
     box-shadow: 0px 0px 14px 0px var(--background-200) inset;
 }
 
-
 main.dashboard {
     grid-area: dashboard;
     grid-column: 1 / -1;
@@ -192,142 +84,6 @@ main.dashboard {
     background-color: var(--card-bg);
     border-radius: 8px;
     box-shadow: 0px 0px 15px 0px var(--card-shadow);
-}
-
-
-
-
-/*
-╔════════╗
-║ inputs ║
-╚════════╝
-
-Pasar a componentes
-*/
-
-.label {
-    width: 100%;
-    display: grid;
-    grid-template-areas: "input";
-    text-wrap: nowrap;
-    min-width: 125px;
-}
-
-.input {
-    grid-area: input;
-    padding-left: 10px;
-    text-align: left;
-    height: 40px;
-    width: 100%;
-    border-radius: 5px;
-    border: 1px solid var(--input-border);
-    cursor: pointer;
-    background-color: var(--input-background);
-    transition: border-color .3s;
-}
-
-.input:disabled {
-    cursor: not-allowed;
-    background-color: var(--input-disabled-bg);
-    color: var(--text-color-label_name);
-}
-
-.input:disabled:hover {
-    border-color: var(--input-border);
-}
-
-.input:hover {
-    border-color: var(--input-border-hover);
-}
-
-.input:not(.error):focus {
-    border: 1px solid var(--input-focus);
-}
-
-.input:not(.error):focus-visible {
-    outline: 1px solid var(--input-focus-visible);
-}
-
-.label__name {
-    grid-area: input;
-    z-index: 1;
-    height: 100%;
-    display: flex;
-    gap: 5px;
-    align-items: center;
-    transition: .2s;
-    cursor: pointer;
-    justify-self: start;
-    color: var(--text-color-label_name);
-    margin-left: 8px;
-    pointer-events: none;
-    font-size: clamp(.75rem, 1.5vw, .8rem);
-}
-
-.label__name svg {
-    fill: var(--text-color);
-    width: 18px;
-}
-
-span.textarea {
-    height: fit-content;
-    padding-top: 5px;
-}
-
-.input:focus+.label__name,
-.input:not(:placeholder-shown)+.label__name {
-    transform: none;
-    opacity: 0;
-    transition: opacity .3s;
-}
-
-
-.input.textarea:focus+.label__name,
-.input.textarea:not(:placeholder-shown)+.label__name {
-    transform: none;
-    opacity: 0;
-    transition: opacity .3s;
-}
-
-textarea {
-    border: 1px solid var(--input-border)
-}
-
-textarea:focus-visible {
-    outline: 1px solid var(--input-focus-visible);
-
-}
-
-textarea:focus {
-    border: 1px solid var(--input-focus);
-}
-
-/* Ocultar flechas para input number
- para todos los navegadores */
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type="number"] {
-    -moz-appearance: textfield;
-    /* Firefox */
-}
-
-.input.error {
-    border: 2px solid var(--accent-red);
-}
-
-.input.error:focus-visible {
-    outline: 0px;
-}
-
-.error-message {
-    color: var(--accent-red);
-    font-size: 0.675em;
-    margin-top: 0.25rem;
-    text-wrap: nowrap;
 }
 
 
@@ -382,105 +138,6 @@ html {
     scrollbar-color: var(--scrolBar-bar) var(--scrolBar-background);
 }
 
-/*
-╔═════════╗
-║ Loaders ║
-╚═════════╝
-*/
-
-/* Loader hourglass */
-.loader-hourglass {
-    display: none;
-    /* Oculto por defecto */
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Mostrar el loader svg hourglass */
-.loader-hourglass.show {
-    display: flex;
-    gap: 5px;
-    /* Mostrar cuando esté activo */
-}
-
-/* Animación de giro para loader hourglass */
-.spinner-hourglass {
-    animation: spin 1s cubic-bezier(0.33, 1, 0.68, 1) infinite;
-}
-
-.spinner-circle {
-    animation: spin 1s linear infinite;
-}
-
-.loader-hourglass.small {
-    width: 25px;
-    height: 25px;
-}
-
-/*spin loader*/
-
-.spinner {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top: 4px solid var(--accent-500);
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    margin: auto;
-}
-
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-.spinner.medium {
-    width: 40px;
-    height: 40px;
-}
-
-/*<div class="spinner loader" id="loading_spinner"></div>*/
-
-
-/*place holder*/
-
-.placeholder-text {
-    border-radius: 8px;
-    animation: pulse 1.5s infinite ease-in-out;
-}
-
-.placeholder-text.medium {
-    width: 200px;
-    height: 20px;
-}
-
-.placeholder-text.small {
-    width: 100px;
-    height: 10px;
-}
-
-@keyframes pulse {
-    0% {
-        background-color: var(--accent-200);
-    }
-
-    50% {
-        background-color: var(--accent-300);
-    }
-
-    100% {
-        background-color: var(--accent-200);
-    }
-}
-
-/*<div class="placeholder-text loader"></div>*/
-
-
 #load-curtain {
     top: 0;
     left: 0;
@@ -496,323 +153,18 @@ html {
     align-items: center;
 }
 
-#load-curtain svg{
+#load-curtain svg {
     width: 50px;
     height: 50px;
     fill: var(--spinner-color);
 }
 
-
-/*
-╔════════╗
-║ Alerts ║
-╚════════╝
-Ya se paso a componentes, probar y borrar
-*/
-
-section.alert {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 10px;
-    gap: 5px;
-    position: fixed;
-    z-index: 100;
-    border: none;
-    border-radius: 5px;
-    background-color: var(--alert-background);
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: context-menu;
-    width: fit-content;
-    box-sizing: border-box;
-    /* Asegura que el padding se incluya en el ancho */
-}
-
-section.alert .body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-section.alert.success {
-    border: 2px solid var(--alert-success);
-}
-
-section.alert.warning {
-    border: 2px solid var(--alert-warning);
-}
-
-section.alert.error {
-    border: 2px solid var(--alert-error);
-}
-
-.alert.show {
-    animation: SlideInTop .9s cubic-bezier(0.33, 1, 0.68, 1) forwards;
-}
-
-.alert.hide {
-    animation: SlideOutTop .9s cubic-bezier(0.33, 1, 0.68, 1) forwards;
-}
-
-section.alert .icon {
-    display: flex;
-    flex-direction: center;
-    width: fit-content;
-}
-
-section.alert .icon img {
-    max-width: 40px;
-}
-
-section.alert a {
-    color: var(--special-text-color);
-    text-decoration: underline;
-}
-
-@keyframes SlideInTop {
-    0% {
-        opacity: 0;
-        transform: translateY(-250px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes SlideOutTop {
-    0% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    100% {
-        opacity: 0;
-        transform: translateY(-250px);
-    }
-}
-
-
-
-/*
-╔════════╗
-║ Modals ║
-╚════════╝
-*/
-
-dialog {
-    position: relative;
-    border: none;
-    border-radius: 8px;
-    background-color: var(--dialog-background);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    cursor: context-menu;
-    animation: showModal 0.6s cubic-bezier(0.25, 1, 0.5, 1) forwards;
-    min-width: 250px;
-    color: var(--text-color);
-}
-
-dialog::backdrop {
-    position: fixed;
-    z-index: -1;
-    backdrop-filter: blur(3px);
-    background-color: rgba(0, 0, 0, 0.527);
-}
-
-.dialog-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: var(--dialog-header-background);
-    font-size: .7rem;
-
-}
-
-.dialog-header h1 {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.dialog-header h1 svg {
-    fill: var(--text-color);
-    width: 26px;
-    height: 26px;
-}
-
-.close-modal {
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-}
-
-.close-modal:hover {
-    background-color: var(--dialog-background);
-    transition: background-color .2s;
-}
-
-@keyframes showModal {
-    from {
-        transform: translate(-50%, -50%) scale(0.8);
-        opacity: 0;
-    }
-
-    to {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 1;
-    }
-}
-
-
-/*
-╔════════════════╗
-║ LOGOUT DIALOG  ║
-╚════════════════╝
-Pasarlo al css del menu lateral
-Unificar el modal par que todos tengan la misma base.
-Luego pasar el de #logout al css de menu lateral
-*/
-#logout .dialog-body {
-    padding: 20px;
-    font-size: .9rem;
-    text-align: center;
-}
-
-#logout .dialog-options {
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px;
-    gap: 8px;
-}
-
-#logout-btn,
-#cancel-btn {
-    padding: 5px;
-    font-size: .9rem;
-    border-radius: 8px;
-    color: var(--text-color);
-}
-
-#cancel-btn {
-    background-color: transparent;
-    border: 1px solid var(--text-color);
-    flex: 1;
-}
-
-#cancel-btn:hover {
-    background-color: var(--text-color);
-    color: var(--dialog-background);
-
-}
-
-#logout-btn {
-    background-color: var(--accent-red);
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-}
-
-#logout-btn:hover {
-    background-color: var(--accent-red-hover);
-
-}
-
-button svg {
-    pointer-events: none;
-}
-
-button .text {
-    pointer-events: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-}
-
-dialog form button .text.hide,
-button .text.hide {
-    display: none;
-}
-
-dialog form button .text.show {
-    display: contents;
-}
-
+/*REVISAR*/
 .input-row-group {
     display: flex;
     flex-direction: row;
     gap: 10px;
 }
-
-/*
-╔══════════╗
-║ Dropdown ║
-╚══════════╝
-Pasar a componentes
-*/
-
-/*Dropdown*/
-.dropdown_menu_container {
-    width: fit-content;
-    position: relative;
-    text-wrap: nowrap;
-
-}
-
-.dropdown_menu {
-    position: absolute;
-    z-index: 1;
-    width: fit-content;
-    /*height: ; Se especifica en cada pagina*/
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    overflow: hidden;
-    list-style: none;
-    transition: height .3s cubic-bezier(0, 0.55, 0.45, 1);
-    border-radius: 3px;
-}
-
-.dropdown_menu a,
-.dropdown_menu button {
-    background-color: var(--dropdownMenu-background);
-    width: 100%;
-    padding: 10px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 1rem;
-    gap: 10px;
-
-}
-
-.dropdown_menu a:hover,
-.dropdown_menu button:hover {
-    background-color: var(--dropdownMenuItem-hover);
-
-}
-
-.dropdown_menu button:active {
-    transform: none;
-}
-
-.dropdown_menu.collapsed {
-    height: 0px;
-    border: 0px;
-}
-
 
 /*
 ╔══════════════════════════╗
@@ -832,65 +184,4 @@ Pasar a componentes
 .fade-in {
     opacity: 0;
     transition: opacity 0.3s ease;
-}
-
-/*
-╔═════════╗
-║ Tooltip ║
-╚═════════╝
-Pasar a componentes
-*/
-
-/* Estilo para el contenedor del elemento */
-.tooltip {
-    position: relative;
-    /* Necesario para posicionar el tooltip */
-    /* display: inline-block;*/
-    display: flex;
-    cursor: pointer;
-}
-
-/* Estilo para el tooltip */
-.tooltip .tooltip-text {
-    visibility: hidden;
-    background-color: var(--tooltip-background);
-    /* Color de fondo */
-    color: var(--text-color);
-    /* Color del texto */
-    text-align: left;
-    padding: 8px;
-    border-radius: 5px;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    /* Posición encima del elemento */
-    left: 50%;
-    transform: translateX(-50%);
-    width: 150px;
-    /* Ancho del tooltip */
-    opacity: 0;
-    /* Transparencia inicial */
-    transition: opacity 0.3s;
-    /* Suaviza la aparición */
-    font-size: 0.7rem;
-}
-
-/* Flecha del tooltip */
-.tooltip .tooltip-text::after {
-    content: '';
-    position: absolute;
-    top: 100%;
-    /* Posicionada en la parte inferior */
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 5px;
-    border-style: solid;
-    border-color: var(--tooltip-background) transparent transparent transparent;
-    /* Flecha hacia arriba */
-}
-
-/* Mostrar el tooltip al hacer hover */
-.tooltip:hover .tooltip-text {
-    visibility: visible;
-    opacity: 1;
 }
