--- a/aplication/css/transport_validator.css
+++ b/aplication/css/transport_validator.css
@@ -22,10 +22,7 @@ main {
 .form-container {
     display: flex;
     flex-direction: column;
-    background-color: var(--form-background);
     gap: 20px;
-    padding: 20px;
-    border-radius: 8px;
     max-width: 700px;
     height: 100%;
     align-items: center;
@@ -73,4 +70,5 @@ main {
  flex-direction: column;
  gap: 8px;
  align-items:  center;
+ text-align: center;
 }
