Modificación de ShowAlert e index de presale
En el index de presale se modifica la fecha de salida de febrero a marzo
Se reforma el ShowAlert para tomar las imagenes de alertas de una funcion que devuelve SVG, esto mejora los tiempos de carga de la alerta ya que no tiene que descargar un png para mostrarla. Soluciona el problema de que en algunas transiciones rapidas la imagen de la alarma no se llegaba a cargar y se mostraba vacia

--- a/aplication/css/login.css
+++ b/aplication/css/login.css
@@ -285,3 +285,9 @@ dialog {
 .dialog-body form button {
     margin-top: 20px !important;
 }
+
+@media only screen and (max-width:400px) {
+    .card{
+        padding: 0px !important;
+    }
+}
