Se implementa reCaptcha en formulario de signup

--- a/aplication/css/login.css
+++ b/aplication/css/login.css
@@ -291,3 +291,8 @@ dialog {
         padding: 0px !important;
     }
 }
+
+/*-esconde el recaptcha-*/
+.grecaptcha-badge{
+    display: none !important;
+}
