--- a/css/landing.css
+++ b/css/landing.css
@@ -41,7 +41,7 @@ section.webpage{
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 nav {
@@ -206,7 +206,24 @@ section.features {
     height: clamp(15px, 1.8vw, 20px)
 }
 
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+    background-color: var(--background);
+    padding: 8px;
+    gap: 20px;
+}
 
+footer a{
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    font-size: .8rem;
+}
 
 ::-webkit-scrollbar {
     width: 12px
