--- a/css/landing.css
+++ b/css/landing.css
@@ -11,7 +11,9 @@
     color: var(--text-color);
 }
 
-svg, a p, a small{
+svg,
+a p,
+a small {
     pointer-events: none;
 }
 
@@ -37,7 +39,7 @@ body {
     z-index: -1;
 }
 
-section.webpage{
+section.webpage {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -57,12 +59,13 @@ nav .title_logo {
     align-items: center;
     justify-content: flex-start;
     gap: 10px;
-    font-size: .7rem;
+    font-size: clamp(.95rem, 3vw, 1.3rem);
 }
 
 nav .title_logo img {
-    width: 30px;
-    height: 30px;
+    width: clamp(30px, 4vw, 50px);
+    height: auto;
+    /* Mantener proporción */
 }
 
 nav .access_platform {
@@ -82,6 +85,8 @@ nav .access_platform a.login {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    text-align: center;
+    font-size: clamp(.85rem, 3vw, 1.1rem);
 }
 
 nav .access_platform a.login:active {
@@ -89,7 +94,7 @@ nav .access_platform a.login:active {
 }
 
 
-main{
+main {
     flex: 1;
     width: 100%;
     margin-top: 20px;
@@ -99,24 +104,29 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
     height: fit-content;
     justify-content: space-around;
 }
 
-main .title{
+main .title {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-main .title p{
-    font-size: .7rem ;
+main .title h1 {
+    font-size: clamp(1.5rem, 4vw, 3rem);
+
 }
 
-main .title h2{
+main .title p {
+    font-size: clamp(.7rem, 2vw, 1rem);
+}
+
+main h2 {
     color: var(--alert-success);
     animation: pulse_regular 2s ease 0s infinite normal forwards;
+    font-size: clamp(1.5rem, 3vw, 2.2rem);
 }
 
 @keyframes pulse_regular {
@@ -139,7 +149,7 @@ main a {
     background-color: var(--button-primary);
     border-radius: 10px;
     padding: 10px 25px 10px 25px;
-    transition: transform 0.2s cubic-bezier(.33, 1, .68, 1);
+    transition: transform 0.2s cubic-bezier(.33, 1, .68, 1), box-shadow 0.2s cubic-bezier(.33, 1, .68, 1);
     cursor: pointer;
     width: fit-content;
     display: flex;
@@ -147,18 +157,23 @@ main a {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    box-shadow: 0px 0px 25px 0px var(--background);
 }
-main a p{
-    font-size: 1rem;
+
+main a p {
+    font-size: clamp(1.1rem, 3vw, 1.5rem);
     font-weight: 700;
 }
-main a small{
+
+main a small {
     font-weight: 200;
-    font-size: .6rem;
+    font-size: clamp(.6rem, 2vw, .8rem);
+            /*clamp(.6rem, 3vw, .8rem)*/
 }
 
 main a:active {
-    transform: scale(.95)
+    transform: scale(.95);
+    box-shadow: none
 }
 
 section.features {
@@ -197,7 +212,7 @@ section.features {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: clamp(.5rem, 2vw, 1rem)
+    font-size: clamp(.7rem, 2vw, 1rem)
 }
 
 .card.feature p svg {
@@ -206,7 +221,7 @@ section.features {
     height: clamp(15px, 1.8vw, 20px)
 }
 
-footer{
+footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -216,7 +231,7 @@ footer{
     gap: 20px;
 }
 
-footer a{
+footer a {
     cursor: pointer;
     display: flex;
     flex-direction: row;
@@ -243,7 +258,8 @@ footer a{
     background-color: var(--scrolBar-hover)
 }
 
-html, section {
+html,
+section {
     scrollbar-width: thin;
     scrollbar-color: var(--scrolBar-bar) var(--scrolBar-background)
 }
