--- a/aplication/css/ping_agent.css
+++ b/aplication/css/ping_agent.css
@@ -141,7 +141,6 @@
     padding: 10px;
     border-radius: 8px;
     width: 100%;
-
 }
 
 .transport a {
@@ -161,6 +160,8 @@
     fill: var(--text-color);
     width: 10px;
 }
+
+
 
 .create-agent {
     display: flex;
@@ -294,9 +295,6 @@
 
 .checkbox-wrapper-13 * {
     box-sizing: inherit;
-
-
-
 }
 
 .checkbox-wrapper-13 *:before,
@@ -308,5 +306,12 @@
     display: flex;
     align-items: center;
     gap: 5px;
+}
 
+.checkbox-wrapper-13{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-wrap: nowrap;
+    text-overflow: clip;
 }
