--- a/aplication/css/style_home.css
+++ b/aplication/css/style_home.css
@@ -284,7 +284,7 @@
 /*drop down*/
 
 .dropdown_menu {
-    height: 40px;
+    height: 80px;
     min-width: 100%;
 }
 
@@ -307,12 +307,19 @@
 }
 
 .dropdown_menu_container.full .dropdown_menu:not(.collapsed) {
-    height: 80px;
+    height: 164px;
 }
 
 
 .dropdown_menu_container.full #ping_agent::after {
     content: "Check the availability and latency of the devices";
+    text-wrap: wrap;
+    text-align: center;
+    font-size: .75rem;
+}
+
+.dropdown_menu_container.full #web_agent::after {
+    content: "Check the availability and performance of your website.";
     text-wrap: wrap;
     text-align: center;
     font-size: .75rem;
