--- a/aplication/css/palette.css
+++ b/aplication/css/palette.css
@@ -239,7 +239,9 @@
   --input-focus-visible: #26184e;
 
   /*Courtin loader*/
-  --spinner-color: #F5F0FE;
+  --spinner-color: #F5F0FE; /*Deprecar*/
+  
+  --loaderCircleColor: #F5F0FE;
   /*Checkbox*/
   --checkbox-active: #b499ff;
   --checkbox-active-inner: #07001a;
