--- a/aplication/css/web_agent_view.css
+++ b/aplication/css/web_agent_view.css
@@ -210,14 +210,20 @@
 .statistics .details{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 8px;
 }
 
-.statistics .details p{
+.statistics .details div{
     border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-wrap: nowrap;
 }
+
+
 
 .circle-percent.box {
     border: 1px solid var(--tooltip-background);
