--- a/aplication/css/web_agent_view.css
+++ b/aplication/css/web_agent_view.css
@@ -207,20 +207,23 @@
     flex: 2;
 }
 
-.statistics .details{
+.statistics .details {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 8px;
 }
 
+
 .statistics .details div{
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-wrap: nowrap;
+    padding: 8px;
+    border: 1px solid var(--input-border);
+    border-radius: 8px;
+    font-size: 1rem;
 }
 
 
